fix: fixed dropdown menus overflows

--- a/src/partials/tables.scss
+++ b/src/partials/tables.scss
@@ -15,6 +15,7 @@
 
 div.table-responsive {
     min-height: 600px;
+    overflow: initial;
 }
 
 .table .table {
